--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="load_app_channel_id">load_app_channel</string>
+    <string name="load_app_channel_name">channel_name</string>
+    <string name="glide_download">Glide - Image Loading Library by BumpTech</string>
+    <string name="load_app_download">LoadApp - Current repository by Udacity</string>
+    <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
 </resources>
