--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="glide_download">Glide - Image Loading Library by BumpTech</string>
     <string name="load_app_download">LoadApp - Current repository by Udacity</string>
     <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="downloading_text">Downloading</string>
+    <string name="download_text">Download</string>
 </resources>
